# nnodes

./: .gitignore  .make  CITATION.cff  LICENSE  README.md  config.toml  genindex.html  index.html  install.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py
_sources/: install.md.txt  introduction.md.txt
_sources/basics/: example.md.txt  hello.md.txt  index.md.txt  intro.md.txt
_sources/reference/: index.md.txt  mpi.md.txt  node.md.txt
_sources/tutorial/: node.md.txt
_static/styles/: furo.css
basics/: cluster.html  example.html  hello.html  index.html  intro.html
doc/source/: conf.py  index.md  install.md  introduction.md  quickstart.md
doc/source/basics/: cluster.md  example.md  hello.md  intro.md
doc/source/reference/: directory.md  (+4 more)
examples/LimitIO/: checkfiles.py  testIO.py
examples/embarrassingly-parallel/: README.md  config.toml  hello.py  slurm.sh
examples/gaussian/: .gitignore  README.md  config.toml  nnrun  workflow.py
examples/hello/: config.toml  hello.py
examples/source/: .gitignore  aliasrc  config.toml  job.bash  source.py
examples/test-traverse/: config.toml  hello.py  runmpitest.py
examples/tests/: .gitignore  config.toml  workflow.py
nnodes/: __init__.py  directory.py  job.py  mpi.py  mpiexec.py  node.py  root.py  tests.py
nnodes/scripts/: nnlog.py  nnmk.py  nnrun.py
reference/: directory.html  index.html  job.html  mpi.html  mpiexec.html  node.html  root.html
scripts/: nnlog  nnmk  nnrun
tutorial/: index.html  mpi.html  node.html  workflow.html
(+20 files in other folders)
