[metadata]
name = nnodes
version = 0.0.2
author = Congyue Cui
author_email = ccui@princeton.edu
description = A workflow manager.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = ccui@princeton.edu
url = https://github.com/icui/nnodes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = Workflow, Cluster, MPI

[options]
python_requires = >=3.8
install_requires = numpy

[options.extras_require]
mpi = 
    mpi4py
docs = 
    sphinx
    furo
